--- a/wkQuiz/ihm-quizz/src/application/vue/Question.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Question.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="669.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Group layoutX="32.0" layoutY="20.0">
@@ -51,7 +50,7 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="660.0" layoutY="150.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #ffffff;" text="Passer" textFill="#2f76ff">
+      <Button layoutX="660.0" layoutY="150.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #ffffff;" text="Passer">
          <font>
             <Font size="20.0" />
          </font>
