Ajout fxid et appel de méthode

--- a/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
@@ -15,17 +14,17 @@
             <Font name="Open Sans" size="40.0" />
          </font>
       </Label>
-      <Label layoutX="7.0" layoutY="152.0" prefHeight="57.0" prefWidth="987.0" text="Message correspondant au nombre de bonnes réponses" textFill="WHITE">
+      <Label fx:id="messageNBReponse" layoutX="7.0" layoutY="152.0" prefHeight="57.0" prefWidth="987.0" text="Message correspondant au nombre de bonnes réponses" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="36.0" />
          </font>
       </Label>
-      <Label layoutX="274.0" layoutY="288.0" prefHeight="57.0" prefWidth="530.0" text="Score/Nombre de questions" textFill="WHITE">
+      <Label fx:id="score" layoutX="274.0" layoutY="288.0" prefHeight="57.0" prefWidth="530.0" text="Score/Nombre de questions" textFill="WHITE">
          <font>
             <Font name="Open Sans Italic" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="260.0" layoutY="360.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Voir les réponses" textFill="WHITE">
+      <Button layoutX="260.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#voirReponses" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Voir les réponses" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="32.0" />
          </font>
@@ -37,7 +36,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="260.0" layoutY="482.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Retourner a l'Acceuil" textFill="WHITE">
+      <Button layoutX="260.0" layoutY="482.0" mnemonicParsing="false" onMouseClicked="#retourAccueil" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Retourner a l'Accueil" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="32.0" />
          </font>
