Ajout Controleur Resultat et ajout commentaires sur Controleur Editer Categorie

--- a/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurResultat">
    <children>
       <Label layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
          <font>
