--- a/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="270.0" layoutY="58.0" text="Solution du Questionnaire" textFill="WHITE">
@@ -19,14 +18,14 @@
             <Font name="Open Sans" size="40.0" />
          </font>
       </Label>
-      <Label layoutX="296.0" layoutY="500.0" text="Score/Nombre de questions" textFill="WHITE">
+      <Label fx:id="score" layoutX="296.0" layoutY="500.0" text="Score/Nombre de questions" textFill="WHITE">
          <font>
             <Font name="Open Sans Italic" size="36.0" />
          </font>
       </Label>
       <ScrollPane layoutX="58.0" layoutY="165.0" prefHeight="300.0" prefWidth="885.0">
          <content>
-            <GridPane prefHeight="290.0" prefWidth="880.0">
+            <GridPane fx:id="tableauSolution" prefHeight="290.0" prefWidth="880.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="425.0" minWidth="10.0" prefWidth="266.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="311.0" minWidth="10.0" prefWidth="266.0" />
@@ -39,14 +38,14 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#quitter">
+      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#retourAccueil">
          <children>
-            <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="96.0" fitWidth="96.0" onMouseClicked="#retourAccueil" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeAcceuil.png" />
                </image>
             </ImageView>
-            <Label contentDisplay="CENTER" layoutY="75.0" prefHeight="57.0" prefWidth="128.0" text="Accueil" textFill="WHITE">
+            <Label contentDisplay="CENTER" layoutY="75.0" onMouseClicked="#retourAccueil" prefHeight="57.0" prefWidth="128.0" text="Accueil" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
