--- a/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Editeur.fxml
@@ -2,14 +2,29 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditeur">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurEditeur">
    <children>
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#accueil">
+         <children>
+            <Label layoutX="-1.0" layoutY="74.0" text="Retour" textFill="WHITE">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="AcceuilBouton" fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/IconeRetour.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Group>
       <Button fx:id="CreerCategorieBouton" layoutX="237.0" layoutY="247.0" mnemonicParsing="false" onAction="#creer" prefHeight="80.0" prefWidth="510.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Question ou une Catégorie" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
@@ -68,19 +83,5 @@
             <Image url="@images/Connector%20line.png" />
          </image>
       </ImageView>
-      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#accueil">
-         <children>
-            <Text fill="WHITE" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acceuil" textAlignment="CENTER">
-               <font>
-                  <Font name="Open Sans Regular" size="32.0" />
-               </font>
-            </Text>
-            <ImageView fx:id="AcceuilBouton" fitHeight="96.0" fitWidth="96.0">
-               <image>
-                  <Image url="@images/IconeAcceuil.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Group>
    </children>
 </Pane>
