--- a/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurResultat">
    <children>
+      <Group layoutX="24.0" layoutY="14.0">
+         <children>
+            <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="-3.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/IconeAcceuil.png" />
+               </image>
+            </ImageView>
+            <Label layoutY="74.0" text="Accueil" textFill="WHITE">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+         </children>
+      </Group>
       <Label layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
       </Label>
-      <Label layoutX="7.0" layoutY="152.0" prefHeight="57.0" prefWidth="987.0" text="Message correspondant au nombre de bonnes réponses" textFill="WHITE">
+      <Text fill="WHITE" layoutX="53.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message correspondant au nombre de bonnes réponses" textAlignment="CENTER">
          <font>
-            <Font name="Open Sans" size="36.0" />
+            <Font size="36.0" />
          </font>
-      </Label>
-      <Label layoutX="274.0" layoutY="288.0" prefHeight="57.0" prefWidth="530.0" text="Score/Nombre de questions" textFill="WHITE">
+      </Text>
+      <Label fx:id="score" layoutX="274.0" layoutY="288.0" prefHeight="57.0" prefWidth="530.0" text="Score/Nombre de questions" textFill="WHITE">
          <font>
             <Font name="Open Sans Italic" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="260.0" layoutY="360.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Voir les réponses" textFill="WHITE">
+      <Button layoutX="260.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#voirReponses" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Voir les réponses" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="32.0" />
          </font>
@@ -37,14 +52,14 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="260.0" layoutY="482.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Retourner a l'Acceuil" textFill="WHITE">
+      <Button layoutX="260.0" layoutY="482.0" mnemonicParsing="false" onMouseClicked="#retourAccueil" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Nouveau Quiz" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="32.0" />
          </font>
          <graphic>
             <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/IconeAcceuil.png" />
+                  <Image url="@images/IconeNouveau.png" />
                </image>
             </ImageView>
          </graphic>
