--- a/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
@@ -11,7 +11,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurResultat">
    <children>
-      <Group layoutX="24.0" layoutY="14.0">
+      <Group layoutX="24.0" layoutY="14.0" onMouseClicked="#retourAccueil">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -25,7 +25,7 @@
             </Label>
          </children>
       </Group>
-      <Label layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
+      <Label fx:id="messageNBReponse" layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
@@ -52,7 +52,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="260.0" layoutY="482.0" mnemonicParsing="false" onMouseClicked="#retourAccueil" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Nouveau Quiz" textFill="WHITE">
+      <Button layoutX="260.0" layoutY="482.0" mnemonicParsing="false" onMouseClicked="#nouveauQuiz" prefHeight="80.0" prefWidth="480.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Nouveau Quiz" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="32.0" />
          </font>
