run  OK sur la bonne page

--- a/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControlleurSolution">
    <children>
-      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#quitter">
+      <Group layoutX="43.0" layoutY="25.0">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -63,7 +63,7 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#quitter">
+      <Group layoutX="43.0" layoutY="25.0">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
