--- a/wkQuiz/ihm-quizz/src/application/vue/Aide.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Aide.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControllerAide">
    <children>
-      <Group layoutX="-51.0" layoutY="-33.0">
+      <Group layoutX="-51.0" layoutY="-33.0" onMouseClicked="#retourPagePrecedente">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="69.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                <image>
