--- a/wkQuiz/ihm-quizz/src/application/vue/css/mainStyle.css
+++ b/wkQuiz/ihm-quizz/src/application/vue/css/mainStyle.css
@@ -127,26 +127,48 @@
     -fx-border-color: #282C34;
 }
 .table-view .column-header .label{
-   -fx-text-fill: white;
-   -fx-font-size: 25px; 
+    -fx-text-fill: white;
+    -fx-font-size: 25px; 
 }
 .table-view .cell{
-  /* -fx-cell-size: 35; */
-  -fx-text-fill: white;
-  -fx-background-color: #282C34;
-  -fx-border-color: #5C6169;
-  -fx-border-width: 0 0 1 0;
+    /* -fx-cell-size: 35; */
+    -fx-text-fill: white;
+    -fx-background-color: #282C34;
+    -fx-border-color: #5C6169;
+    -fx-border-width: 0 0 1 0;
 }
 .table-view .cell:odd{
-  -fx-text-fill: white;
-  -fx-background-color: #3E4451;
-  -fx-border-color: #5C6169;
-  -fx-border-width: 0 0 1 0;
+    -fx-text-fill: white;
+    -fx-background-color: #3E4451;
+    -fx-border-color: #5C6169;
+    -fx-border-width: 0 0 1 0;
 }
 
 .table-view {
 	-fx-border-color: #282C34;
 }
+
+.table-row-cell:empty .table-cell {
+	 -fx-text-fill: #282C34;
+	 -fx-border-color: #282C34;
+	 
+}
+
+.table-row-cell:odd:empty .table-cell {
+	 -fx-text-fill: #3E4451;
+	 -fx-border-color: #3E4451;
+	 
+}
+.table-view .placeholder {
+    -fx-background-color: #282C34;
+}
+.table-view .label {
+    -fx-text-fill: white;
+    -fx-font-size: 30px; 
+}
+
+
+
 
 /*                               */
 /* fin Gestion des tableView     */
