--- a/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
@@ -25,7 +25,7 @@
             </Label>
          </children>
       </Group>
-      <Label fx:id="messageNBReponse" layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
+      <Label  layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
