--- a/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -61,30 +62,33 @@
                <font>
                   <Font size="20.0" />
                </font>
+               <toggleGroup>
+                  <ToggleGroup fx:id="reponseChoisi" />
+               </toggleGroup>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Choix 2" textFill="WHITE">
+            <RadioButton mnemonicParsing="false" text="Choix 2" textFill="WHITE" toggleGroup="$reponseChoisi">
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Choix 3" textFill="WHITE">
+            <RadioButton mnemonicParsing="false" text="Choix 3" textFill="WHITE" toggleGroup="$reponseChoisi">
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Choix 4" textFill="WHITE">
+            <RadioButton mnemonicParsing="false" text="Choix 4" textFill="WHITE" toggleGroup="$reponseChoisi">
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Choix 5" textFill="WHITE">
+            <RadioButton mnemonicParsing="false" text="Choix 5" textFill="WHITE" toggleGroup="$reponseChoisi">
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
          </children>
       </VBox>
-      <Button layoutX="400.0" layoutY="706.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #004F08;" text="Valider" textFill="WHITE">
+      <Button layoutX="400.0" layoutY="706.0" mnemonicParsing="false" onMouseClicked="#validerReponse" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #004F08;" text="Valider" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
