--- a/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
@@ -40,7 +40,7 @@
             </Label>
          </children>
       </Group>
-      <Label layoutX="315.0" layoutY="50.0" prefHeight="58.0" prefWidth="369.0" text="*Numéro Question *" textFill="WHITE">
+      <Label fx:id="numero" layoutX="381.0" layoutY="53.0" prefHeight="58.0" prefWidth="246.0" text="Question n°" textFill="WHITE">
          <font>
             <Font size="40.0" />
          </font>
@@ -55,7 +55,7 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <VBox layoutX="216.0" layoutY="331.0" prefHeight="310.0" prefWidth="569.0" spacing="30.0">
+      <VBox layoutX="216.0" layoutY="395.0" prefHeight="310.0" prefWidth="569.0" spacing="30.0">
          <children>
             <RadioButton mnemonicParsing="false" text="Choix 1" textFill="WHITE">
                <font>
@@ -89,17 +89,17 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Label layoutX="361.0" layoutY="242.0" text="*Intitulé Question :*" textFill="WHITE">
+      <Label fx:id="intitule" alignment="CENTER" layoutX="35.0" layoutY="198.0" prefHeight="185.0" prefWidth="938.0" text="*Intitulé Question :*" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <Label layoutX="32.0" layoutY="167.0" text="*Catégorie Question :*" textFill="WHITE">
+      <Label fx:id="categorie" layoutX="32.0" layoutY="149.0" text="*Catégorie Question :*" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <Label layoutX="667.0" layoutY="182.0" text="*Difficulté Question :*" textFill="WHITE">
+      <Label fx:id="difficulte" layoutX="800.0" layoutY="149.0" prefHeight="47.0" prefWidth="200.0" text="Difficultée : " textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
