--- a/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1001.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurSolution">
    <children>
-      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#quitter">
+      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -28,19 +28,19 @@
             </Label>
          </children>
       </Group>
-      <Label layoutX="269.0" layoutY="62.0" text="Solution du Questionnaire" textFill="WHITE">
+      <Label layoutX="343.0" layoutY="62.0" text="Solution du Quizz" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
       </Label>
-      <Text fill="WHITE" layoutX="250.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score/Nombre de questions" textAlignment="CENTER" wrappingWidth="499.9453125">
+      <Text fx:id="score" fill="WHITE" layoutX="250.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score/Nombre de questions" textAlignment="CENTER" wrappingWidth="499.9453125">
          <font>
             <Font size="36.0" />
          </font>
       </Text>
-      <ScrollPane hbarPolicy="NEVER" layoutX="8.0" layoutY="249.0" pannable="true" prefHeight="300.0" prefWidth="984.0" vbarPolicy="ALWAYS">
+      <ScrollPane hbarPolicy="NEVER" layoutX="1.0" layoutY="249.0" pannable="true" prefHeight="386.0" prefWidth="1000.0" vbarPolicy="ALWAYS">
          <content>
-            <GridPane alignment="CENTER" gridLinesVisible="true" prefHeight="401.0" prefWidth="988.0">
+            <GridPane fx:id="tableauSolution" alignment="TOP_CENTER" gridLinesVisible="true" prefHeight="121.0" prefWidth="981.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="425.0" minWidth="10.0" prefWidth="199.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="386.0" minWidth="10.0" prefWidth="284.0" />
@@ -48,14 +48,10 @@
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="184.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="140.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="141.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="125.0" minHeight="10.0" prefHeight="125.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="100.0" minHeight="50.0" prefHeight="57.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Libelle" textAlignment="CENTER" GridPane.halignment="CENTER" />
+                  <Label text="Libelle" GridPane.halignment="CENTER" />
                   <Label text="Réponse Juste" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                   <Label text="Feedback" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
                   <Label text="Votre réponse" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
@@ -63,19 +59,5 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#quitter">
-         <children>
-            <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/IconeAcceuil.png" />
-               </image>
-            </ImageView>
-            <Label contentDisplay="CENTER" layoutY="75.0" prefHeight="57.0" prefWidth="128.0" text="Accueil" textFill="WHITE">
-               <font>
-                  <Font size="32.0" />
-               </font>
-            </Label>
-         </children>
-      </Group>
    </children>
 </Pane>
