--- a/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
@@ -57,7 +57,7 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button layoutX="1133.0" layoutY="814.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #E00000;" text="Passer" textFill="WHITE">
+      <Button layoutX="1160.0" layoutY="810.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #E00000;" text="Passer" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -94,7 +94,7 @@
             </RadioButton>
          </children>
       </VBox>
-      <Button layoutX="625.0" layoutY="808.0" mnemonicParsing="false" onMouseClicked="#validerReponse" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #004F08;" text="Valider" textFill="WHITE">
+      <Button fx:id="valider" layoutX="602.0" layoutY="815.0" mnemonicParsing="false" onMouseClicked="#validerReponse" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #004F08;" text="Valider" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
