--- a/wkQuiz/ihm-quizz/src/application/vue/Aide.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Aide.fxml
@@ -28,37 +28,31 @@
          <font>
             <Font size="40.0" />
          </font></Label>
-      <Text fx:id="Text1" fill="WHITE" layoutX="47.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
+      <Text fx:id="text1" fill="WHITE" layoutX="47.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
          <font>
             <Font size="15.0" />
          </font>
       </Text>
-      <Text fx:id="Text2" fill="WHITE" layoutX="47.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
+      <Text fx:id="text2" fill="WHITE" layoutX="47.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
          <font>
             <Font size="15.0" />
          </font>
       </Text>
-      <Text fx:id="Text3" fill="WHITE" layoutX="47.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
+      <Text fx:id="text3" fill="WHITE" layoutX="47.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
          <font>
             <Font size="15.0" />
          </font>
       </Text>
-      <Text fx:id="Text4" fill="WHITE" layoutX="47.0" layoutY="288.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
+      <Text fx:id="text4" fill="WHITE" layoutX="47.0" layoutY="288.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
          <font>
             <Font size="15.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="47.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
+      <Text fx:id="text5" fill="WHITE" layoutX="47.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
          <font>
             <Font size="15.0" />
          </font>
       </Text>
-      <Label layoutX="47.0" layoutY="459.0" textFill="WHITE">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="109.0" fitWidth="940.0" layoutX="30.0" layoutY="480.0" pickOnBounds="true" preserveRatio="true" />
       <Text fill="WHITE" layoutX="47.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="934.0">
          <font>
             <Font size="15.0" />
@@ -69,5 +63,11 @@
             <Font size="15.0" />
          </font>
       </Text>
+      <Label layoutX="47.0" layoutY="459.0" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="exempleTableur" fitHeight="109.0" fitWidth="940.0" layoutX="30.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
