--- a/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
@@ -57,7 +57,7 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button layoutX="1160.0" layoutY="810.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #E00000;" text="Passer" textFill="WHITE">
+      <Button layoutX="1160.0" layoutY="810.0" mnemonicParsing="false" onMouseClicked="#passer" prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 60; -fx-background-color: #E00000;" text="Passer" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
