--- a/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
@@ -2,17 +2,15 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1001.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurSolution">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1256.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurSolution">
    <children>
       <Group layoutX="43.0" layoutY="25.0" onMouseClicked="#retour">
          <children>
@@ -28,36 +26,21 @@
             </Label>
          </children>
       </Group>
-      <Label layoutX="343.0" layoutY="62.0" text="Solution du Quizz" textFill="WHITE">
+      <Label layoutX="472.0" layoutY="65.0" text="Solution du Quizz" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
       </Label>
-      <Text fx:id="score" fill="WHITE" layoutX="250.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score/Nombre de questions" textAlignment="CENTER" wrappingWidth="499.9453125">
+      <Text fx:id="score" fill="WHITE" layoutX="379.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score/Nombre de questions" textAlignment="CENTER" wrappingWidth="499.9453125">
          <font>
             <Font size="36.0" />
          </font>
       </Text>
-      <ScrollPane hbarPolicy="NEVER" layoutX="1.0" layoutY="249.0" pannable="true" prefHeight="386.0" prefWidth="1000.0" vbarPolicy="ALWAYS">
-         <content>
-            <GridPane fx:id="tableauSolution" alignment="TOP_CENTER" gridLinesVisible="true" prefHeight="121.0" prefWidth="981.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="425.0" minWidth="10.0" prefWidth="199.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="386.0" minWidth="10.0" prefWidth="284.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="385.0" minWidth="10.0" prefWidth="297.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="184.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="100.0" minHeight="50.0" prefHeight="57.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="Libelle" GridPane.halignment="CENTER" />
-                  <Label text="Réponse Juste" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                  <Label text="Feedback" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-                  <Label text="Votre réponse" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
-               </children>
-            </GridPane>
-         </content>
-      </ScrollPane>
+      <TableView fx:id="tableauSolution" layoutX="27.0" layoutY="235.0" prefHeight="387.0" prefWidth="1203.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
    </children>
 </Pane>
