Controleur SelectionCatégorie fini
Pour selectionner une catégorie est que ça prend toute les question de cette categorie

--- a/wkQuiz/ihm-quizz/src/application/vue/css/mainStyle.css
+++ b/wkQuiz/ihm-quizz/src/application/vue/css/mainStyle.css
@@ -167,7 +167,9 @@
     -fx-font-size: 30px; 
 }
 
-
+.anchor-pane {
+    -fx-background-color: #282C34;
+}
 
 
 /*                               */
