Fix de ControleurSolution
La table view est bien
Si le text est trop long on peut hover pour en voir la totalité

--- a/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Solution.fxml
@@ -37,10 +37,13 @@
          </font>
       </Text>
       <TableView fx:id="tableauSolution" layoutX="27.0" layoutY="235.0" prefHeight="387.0" prefWidth="1203.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
+         <columns>
+            <TableColumn fx:id="colonneLibelle" maxWidth="500.0" minWidth="100.0" prefWidth="245.0" text="Libelle" />
+            <TableColumn fx:id="colonneCategorie" maxWidth="200.0" minWidth="100.0" prefWidth="200.0" text="Categorie" />
+            <TableColumn fx:id="colonneReponseJuste" maxWidth="500.0" minWidth="175.0" prefWidth="310.0" text="Réponse juste" />
+            <TableColumn fx:id="colonneFeedBack" maxWidth="500.0" minWidth="100.0" prefWidth="310.0" text="FeedBack" />
+            <TableColumn fx:id="colonneIndication" maxWidth="130.0" prefWidth="130.0" resizable="false" text="Indication" />
+         </columns>
       </TableView>
    </children>
 </Pane>
